# CodingTheory

Task1/resources/: config.json
Task1/src/: coder.py  controllers.py  interactors.py  source.py  srcdesc.py  task1.py  task2.py
Task1/src/resources/: code.txt  not_stationary_src.json  stationary_src.json  ternary_src.json
Task1/test/: mocks.py  tests1.py  tests2.py
Task3/: CMakeLists.txt  README.md
Task3/inc/: Archiever.hpp  CodeGenerator.hpp  Coder.hpp  Controller.hpp  Decoder.hpp  DecodingTable.hpp  archiever.hpp  coder.hpp
Task3/resources/: file.txt
Task3/src/: Archiever.cpp  CodeGenerator.cpp  Coder.cpp  Controller.cpp  Decoder.cpp  DecodingTable.cpp  archiever.cpp  coder.cpp  main.cpp
Task4/: .gitignore  README.md
Task4/src/: codegen.py  coder.py  converters.py  main.py  utils.py
Task4/tests/: test.py
Task4/tests/resources/: code.json
